# AgmonMotzkin

./: CMakeLists.txt  README.md  reference_result.txt
executables/: CMakeLists.txt  main.cpp  mpi.cpp
include/: AgmonMotzkin.h
src/: AgmonMotzkin.cpp  AgmonMotzkin.h  CMakeLists.txt  main.cpp
utils/: Debug.h  File.h  Timer.h
